rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i lo -j ACCEPT -m comment --comment "loopback"
-A INPUT -p icmp --icmp-type destination-unreachable -j ACCEPT
-A INPUT -p icmp --icmp-type time-exceeded -j ACCEPT
# ipsec
-A INPUT -p udp -m udp --dport 500 -j ACCEPT -m comment --comment "ipsec"
-A INPUT -p esp -j ACCEPT -m comment --comment "ipsec"
-A INPUT -p ah -j ACCEPT -m comment --comment "ipsec"
# vbox
-A INPUT -i vboxnet0 -j ACCEPT -m comment --comment "VirtualBox host-only net"
# MTU autodiscovery
-A INPUT -p icmp --icmp-type destination-unreachable -j ACCEPT -m comment --comment "MTU autodiscovery"
-A INPUT -p icmp --icmp-type fragmentation-needed -j ACCEPT -m comment --comment "MTU autodiscovery"

COMMIT
